web_ide/editor/index.css
:root {
    --height-for-navigation: 35px;
    --width-for-menu: 75px;
    --min-line-height: 28.8px;
    --font-size: 24px;
    --scrollable-area-in-px: 125px;
    --width-of-vertical-scrollbar: 25px;
}

* {
    height: 100%;
    padding: 0;
    margin: 0;
    width: 100%;
}

body {
    display: block;
    padding: 0;
    margin: 0;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    pointer-events: none;
}

html::selection {
    background-color: transparent;
}

.navigation {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: var(--height-for-navigation);
    background-color: rgb(82, 82, 82);
}

.container {
    pointer-events: all;
    position: absolute;
    top: var(--height-for-navigation);
    left: 0%;
    height: calc(100% - var(--height-for-navigation));
    width: 100%;
}

.view-container {
    display: block;
    position: relative;
    width: 100%;
    height: 100%;
}

.menu {
    position: absolute;
    top: 0%;
    left: 0%;
    width: var(--width-for-menu);
    height: 100%;
    background-color: rgb(55, 55, 55);
}

.editor {
    display: block;
    position: absolute;
    left: var(--width-for-menu);
    top: 0%;
    width: calc(100% - var(--width-for-menu));
    height: 100%;
    background-color: black;
}

.editor-container {
    position: absolute;
    background-color: black;
    width: 100%;
    height: 100%;
}

.editor-view {
    position: relative;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.interpreter-screen {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
}

.loader {
    position: absolute;
    width: 100%;
    contain: strict;
}

.content {
    position: absolute;
    width: 100%;
    height: 100%;
}

#line-numeration {
    position: absolute;
    background-color: black;
    width: var(--width-for-menu);
    height: 100%;
    pointer-events: none;
    user-select: none;
}

#line-content {
    position: absolute;
    left: var(--width-for-menu);
    width: calc(100% - var(--width-for-menu));
    height: 100%;
}

.numeration {
    position: absolute;
    color: white;
    text-align: center;
    width: 100%;
    height: var(--min-line-height);
    padding: 0%;
    margin: 0%;
    font-size: var(--font-size);
    font-family: 'Courier New', Courier, monospace;
}

.line-content {
    color: white;
    position: absolute;
    width: 100%;
    height: fit-content;
    white-space: pre;
    height: var(--min-line-height);
    padding: 0%;
    margin: 0%;
    font-size: var(--font-size);
    font-family: 'Courier New', Courier, monospace;
}

.line-content-marker {
    color: white;
    position: absolute;
    width: fit-content;
    height: fit-content;
    white-space: pre;
    height: var(--min-line-height);
    padding: 0%;
    margin: 0%;
    font-size: var(--font-size);
    font-family: 'Courier New', Courier, monospace;
}

.scrollable-area-vertical {
    position: sticky;
    width: var(--scrollable-area-in-px);
    height: 100%;
    left: 100%;
    top: 0%;
    background-color: transparent;
    pointer-events: none;
}

#scrollbar-vertical {
    pointer-events: all;
    position: sticky;
    width: var(--width-of-vertical-scrollbar);
    height: 100%;
    left: 100%;
    top: 0%;
    border: 1px solid gray;
    background-color: black;
}

#bar-vertical {
    position: absolute;
    width: 100%;
    height: 10%;
    background-color: gray;
}

#bar-vertical:hover {
    opacity: 0.5;
    background-color: rgb(91, 91, 91);
}

.scrollable-area-horizontal {
    position: sticky;
    width: 100%;
    height: var(--scrollable-area-in-px);
    left: 0%;
    bottom: 0%;
    background-color: transparent;
    pointer-events: none;
}

#scrollbar-horizontal {
    pointer-events: all;
    position: sticky;
    width: calc(100% - var(--width-for-menu) - var(--width-of-vertical-scrollbar));
    height: 25px;
    left: var(--width-for-menu);
    top: 100%;
}

#bar-horizontal {
    position: absolute;
    width: 10%;
    height: 100%;
    opacity: 0.5;
    background-color: gray;
}

#bar-horizontal:hover {
    background-color: rgb(215, 215, 215);
}

.line-selector {
    position: absolute;
    left: var(--width-for-menu);
    width: calc(100% - var(--width-for-menu));
    height: var(--min-line-height);
    background-color: transparent;
    border: solid 1px gray;
}

.caret {
    position: absolute;
    width: 3px;
    background-color: orange;
    height: var(--min-line-height);
    animation: blink 1s linear infinite;
    z-index: 0;
}

@keyframes blink {
    25% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

.marker {
    position: absolute;
    width: fit-content;
    height: fit-content;
    background-color: transparent;
    color: transparent;
    left: var(--width-for-menu);
    z-index: -1;
}

